--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,14 +72,14 @@ services:
       POSTGRES_DB: vapor_database
     ports:
       - '5432:5432'
-  db:
-    image: mysql:8.0
-    volumes:
-      - db_data:/var/lib/mysql
-    environment:
-      MYSQL_USER: vapor_username
-      MYSQL_PASSWORD: vapor_password
-      MYSQL_DATABASE: vapor_database
-      MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
-    ports:
-      - '3306:3306'
+#  db:
+#    image: mysql:8.0
+#    volumes:
+#      - db_data:/var/lib/mysql
+#    environment:
+#      MYSQL_USER: vapor_username
+#      MYSQL_PASSWORD: vapor_password
+#      MYSQL_DATABASE: vapor_database
+#      MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+#    ports:
+#      - '3306:3306'
